[gd_scene load_steps=11 format=2]

[ext_resource path="res://resources/pixel art/enemy/enemy_3_sheet.png" type="Texture" id=1]
[ext_resource path="res://resources/sound/tarantula/destroyed.wav" type="AudioStream" id=2]
[ext_resource path="res://resources/sound/sfx/explosion-01.wav" type="AudioStream" id=3]
[ext_resource path="res://resources/sound/immolator/flying.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/enemy/enemy_immolator.gd" type="Script" id=5]
[ext_resource path="res://scenes/vfx/enemyDestroyedParticles.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
length = 0.001

[sub_resource type="Animation" id=2]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("enemy_immolator/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.41327, 3.99426 )

[sub_resource type="CircleShape2D" id=4]
radius = 139.374

[node name="enemy_3" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [ -20.1652, 24.0 ],
"_edit_vertical_guides_": [ 1.16994, -24.0 ]
}

[node name="enemy_immolator" type="KinematicBody2D" parent="." groups=["enemy"]]
script = ExtResource( 5 )
deathParticles = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="enemy_immolator"]
scale = Vector2( 2.6, 2.6 )
texture = ExtResource( 1 )
hframes = 4
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemy_immolator"]
root_node = NodePath("../..")
autoplay = "idle"
anims/RESET = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_immolator"]
position = Vector2( -0.634632, -3.04545 )
scale = Vector2( 2.72, 2.72 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="enemy_immolator"]

[node name="destroyedAudioStream" type="AudioStreamPlayer2D" parent="enemy_immolator"]
stream = ExtResource( 3 )
volume_db = -6.0
pitch_scale = 2.1

[node name="onHitAudioStream" type="AudioStreamPlayer2D" parent="enemy_immolator"]
stream = ExtResource( 2 )
volume_db = -12.0
pitch_scale = 0.32

[node name="hoveringAudioStream" type="AudioStreamPlayer2D" parent="enemy_immolator"]
stream = ExtResource( 4 )
volume_db = -16.0
pitch_scale = 1.19
autoplay = true
max_distance = 700.0

[node name="Area2D" type="Area2D" parent="enemy_immolator"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_immolator/Area2D"]
shape = SubResource( 4 )

[connection signal="timeout" from="enemy_immolator/Timer" to="enemy_immolator" method="_on_Timer_timeout"]
[connection signal="body_entered" from="enemy_immolator/Area2D" to="enemy_immolator" method="_on_Area2D_body_entered"]
